add about us blocks

--- a/wp-content/themes/publiframework/assets/src/index.scss
+++ b/wp-content/themes/publiframework/assets/src/index.scss
@@ -21,6 +21,7 @@
 @import 'scss/blocks/block-breadcrumbs';
 @import 'scss/blocks/block-slider-video';
 @import 'scss/blocks/block-text-side-image';
+@import 'scss/blocks/block-text-side-carousel';
 @import 'scss/blocks/block-slider-fullwidth';
 @import 'scss/blocks/block-news-section';
 @import 'scss/blocks/block-form-section';
@@ -32,6 +33,8 @@
 @import 'scss/blocks/block-google-maps';
 @import 'scss/blocks/block-text-with-boxes';
 @import 'scss/blocks/block-work-application';
+@import 'scss/blocks/block-text-section';
+@import 'scss/blocks/block-two-columns';
 
 // Pages
 //@import './scss/pages/home';
