end conversion from PHP to JS API for services archive

--- a/wp-content/themes/publiframework/assets/src/scss/pages/archive-services.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/pages/archive-services.scss
@@ -137,6 +137,13 @@
             gap: 1rem;
         }
 
+        .prev,
+        .next {
+            &.hidden {
+                display: none;
+            }
+        }
+
         .prev {
             &::before {
                 transform: rotate(180deg);
