--- a/wp-content/themes/publiframework/templates/home.twig
+++ b/wp-content/themes/publiframework/templates/home.twig
@@ -1,9 +1,11 @@
 {% extends "layout/base.twig" %}
 
 {% block content %}
-    {{ hero_block }}
-    {{ breadcrumb_block }}
-
+    {# Top blocks #}
+    {% for block in top_blocks %}
+        {{ block }}
+    {% endfor %}
+    
     <section class="news-archive">
         <div class="container">
             <ul class="categories-list list-unstyled d-flex gap-5" id="top-archive">
@@ -11,7 +13,7 @@
                     <a href="{{ news_archive_url }}#top-archive"
                        {% if active_taxonomy_id is null %}class="active"{% endif %}>Tutte</a>
                 </li>
-
+                
                 {% for category in blog_categories %}
                     <li>
                         <a {% if active_taxonomy_id == category.term_id %}class="active"{% endif %}
@@ -21,7 +23,7 @@
                     </li>
                 {% endfor %}
             </ul>
-
+            
             <div class="row g-4 boxes-news">
                 {% for post in posts %}
                     <div class="col-md-4">
@@ -32,7 +34,7 @@
                                             type="image/webp">
                                     <source srcset="{{ post.thumbnail.src|resize(360,220, 'center') }}">
                                     <img src="{{ post.thumbnail.src|towebp|resize(360,220, 'center') }}"
-                                         alt="{{ post.thumbnail.alt }}" />
+                                         alt="{{ post.thumbnail.alt }}"/>
                                 </picture>
                             </a>
                             <div>
@@ -54,12 +56,15 @@
                     </div>
                 {% endfor %}
             </div>
-
+            
             {% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
         </div>
     </section>
-
+    
+    {# Bottom blocks #}
     {% apply shortcodes %}
-        {{ form_block }}
+        {% for block in bottom_blocks %}
+            {{ block }}
+        {% endfor %}
     {% endapply %}
 {% endblock %}
