--- a/wp-content/themes/publiframework/assets/src/scss/components/_buttons.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/components/_buttons.scss
@@ -155,3 +155,16 @@
         transform: rotate(180deg);
     }
 }
+
+/******************************************************
+    RESPONSIVE
+ ******************************************************/
+
+@media (max-width: 991px) {
+    .button {
+        &.big {
+            padding: 1rem 2rem;
+            font-size: 1.8rem;
+        }
+    }
+}
