--- a/wp-content/themes/publiframework/assets/src/scss/layout/_header.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/layout/_header.scss
@@ -11,7 +11,7 @@
     background: $back-col;
     filter: drop-shadow(0 1rem 2rem rgba($black, 0.08));
 
-    // border top avove the logo circle
+    // border top above the logo circle
     &::before {
         content: '';
         position: absolute;
@@ -28,8 +28,6 @@
         top: -4rem;
         left: 50%;
         translate: -50%;
-        display: grid;
-        place-content: center;
         width: 30rem;
         height: 30rem;
         background: $back-col;
@@ -49,56 +47,10 @@
         }
     }
 
-    //Mobile hamburger
-    .navbar-toggler {
-        //padding: 0;
-        //border: 0;
-        //
-        //.navbar-toggler-icon {
-        //    display: block;
-        //    width: auto;
-        //    height: auto;
-        //    text-align: center;
-        //    background: transparent;
-        //
-        //    .icon {
-        //        width: 32px;
-        //
-        //        &.icon-open {
-        //            display: none;
-        //        }
-        //
-        //        &.icon-close {
-        //            width: 21px;
-        //            transform: translate(-5px, 0);
-        //            color: $primary;
-        //        }
-        //    }
-        //}
-        //
-        //&.collapsed {
-        //    .navbar-toggler-icon {
-        //        .icon-open {
-        //            display: block;
-        //        }
-        //
-        //        .icon-close {
-        //            display: none;
-        //        }
-        //    }
-        //}
-        //
-        //&:focus {
-        //    box-shadow: none;
-        //}
-    }
-
     // Menu
     .navbar-collapse {
-        display: flex;
-
         .navbar-nav {
-            width: 50%;
+            width: calc(50% - 15rem);
             gap: 0 15%;
 
             &:last-child {
@@ -182,6 +134,190 @@
                 & > li {
                     & > a {
                         padding: 2rem 0;
+                    }
+                }
+            }
+        }
+    }
+}
+
+/******************************************************
+    RESPONSIVE
+ ******************************************************/
+
+@media (max-width: 1399px) {
+    .site-header {
+        .logo {
+            width: 20rem;
+            height: 20rem;
+
+            img {
+                margin-top: 4rem;
+                width: 15rem;
+            }
+        }
+
+        .navbar-collapse {
+            .navbar-nav {
+                width: calc(50% - 10rem);
+                gap: 0 7%;
+
+                &:last-child {
+                    gap: 7%;
+                }
+
+                & > li {
+                    & > a {
+                        padding: 4rem 0;
+                        font-size: 1.8rem;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 991px) {
+    .site-header {
+        .navbar {
+            overflow: auto;
+        }
+
+        .container {
+            position: relative;
+        }
+
+        // border top above the logo circle
+        &::before {
+            height: 0.3rem;
+        }
+
+        .logo {
+            display: block;
+            position: static;
+            width: auto;
+            height: auto;
+            translate: none;
+            padding: 1rem 0;
+            border-radius: 0;
+
+            img {
+                margin-top: 0;
+                width: auto;
+                height: 6rem;
+                transition: height 0.3s ease-in-out;
+            }
+        }
+
+        //Mobile hamburger
+        .navbar-toggler {
+            padding: 0;
+            border: 0;
+
+            .navbar-toggler-icon {
+                display: block;
+                width: auto;
+                height: auto;
+                text-align: center;
+                background: transparent;
+                transform: translateX(0.5rem);
+                .icon {
+                    width: 32px;
+                    &.icon-open {
+                        display: none;
+                    }
+                    &.icon-close {
+                        width: 21px;
+                        transform: translate(-4px, 0);
+                        color: $primary;
+                    }
+                }
+            }
+            &.collapsed {
+                .navbar-toggler-icon {
+                    .icon-open {
+                        display: block;
+                    }
+                    .icon-close {
+                        display: none;
+                    }
+                }
+            }
+            &:focus {
+                box-shadow: none;
+            }
+        }
+
+        .navbar-collapse {
+            padding: 1rem 0 2rem;
+
+            .navbar-nav {
+                width: 100%;
+                gap: 0;
+
+                &:last-child {
+                    gap: 0;
+                }
+
+                & > li {
+                    & > a {
+                        padding: 1rem 0;
+                        font-size: 1.6rem;
+                        border-bottom: 0;
+                    }
+                    &.current-menu-ancestor,
+                    &.current-menu-item {
+                        & > a {
+                            color: $primary;
+                        }
+                    }
+
+                    .dropdown-menu {
+                        position: static;
+                        background: $light-gray;
+
+                        .dropdown-item {
+                            padding: 1rem;
+                            font-weight: $font-bold;
+                            font-size: 1.4rem;
+
+                            &:hover,
+                            &:focus-visible,
+                            &.active {
+                                background: rgba($primary, 0.05);
+                            }
+                        }
+
+                        .current-menu-item {
+                            .dropdown-item {
+                                background: rgba($primary, 0.1);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+        // Scrolled version
+        &.scrolled {
+            .logo {
+                top: 0;
+                width: auto;
+                height: auto;
+
+                img {
+                    margin-top: 0;
+                    width: auto;
+                    height: 6rem;
+                }
+            }
+
+            .navbar-collapse {
+                .navbar-nav {
+                    & > li {
+                        & > a {
+                            padding: 1rem 0;
+                        }
                     }
                 }
             }
