--- a/wp-content/themes/publiframework/templates/partial/menu.twig
+++ b/wp-content/themes/publiframework/templates/partial/menu.twig
@@ -1,9 +1,9 @@
 {% if menu %}
     {% for item in items %}
         {% if loop.index == 1 or loop.index == 4 %}
-            <ul class="navbar-nav d-flex flex-row">
+            <ul class="navbar-nav d-lg-flex flex-lg-row">
         {% endif %}
-
+        
         <li class="nav-item {{ item.classes | join(' ') }} {% if item.children %} dropdown{% endif %}">
             <a id="menu-item-{{ item.post_name }}"
                class="nav-link {% if item.children %} dropdown-toggle{% endif %}"
@@ -29,7 +29,7 @@
                 </ul>
             {% endif %}
         </li>
-
+        
         {% if loop.index == 3 or loop.index == 6 %}
             </ul>
         {% endif %}
