responsive block text side image

--- a/wp-content/themes/publiframework/assets/src/scss/blocks/block-slider-video.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/blocks/block-slider-video.scss
@@ -36,6 +36,7 @@
             }
 
             .section-title {
+                @include section-title('large');
                 margin-bottom: 5rem;
             }
 
