--- a/wp-content/themes/publiframework/assets/src/scss/components/_buttons.scss
+++ b/wp-content/themes/publiframework/assets/src/scss/components/_buttons.scss
@@ -168,3 +168,11 @@
         }
     }
 }
+
+@media (max-width: 767px) {
+    .wp-element-button {
+        gap: 1.2rem;
+        padding: 0.8rem 1.5rem;
+        font-size: 1.6rem;
+    }
+}
